[gd_scene load_steps=4 format=3 uid="uid://pon5j0lsdfbm"]

[ext_resource type="Script" path="res://scn/main/AccessContainer.gd" id="1_50b7o"]
[ext_resource type="Texture2D" uid="uid://gdkxly1qdp4c" path="res://assets/img/icons/google-icons/lock_open/1x/baseline_lock_open_white_24dp.png" id="2_qnd6s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4wq4r"]
bg_color = Color(0.12549, 0.133333, 0.145098, 1)

[node name="AccessContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4wq4r")
script = ExtResource("1_50b7o")

[node name="PanelContainer" type="MarginContainer" parent="."]
offset_left = 441.0
offset_top = 283.0
offset_right = 711.0
offset_bottom = 365.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 260.0
offset_bottom = 72.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
offset_right = 250.0
offset_bottom = 26.0
text = "Access"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 250.0
offset_bottom = 62.0
theme_override_constants/separation = 8

[node name="AccessSecret" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2i(210, 0)
offset_right = 210.0
offset_bottom = 32.0
placeholder_text = "your secret"
secret = true

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
offset_left = 218.0
offset_right = 250.0
offset_bottom = 32.0
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("2_qnd6s")
icon_alignment = 1

[connection signal="text_changed" from="PanelContainer/VBoxContainer/HBoxContainer/AccessSecret" to="." method="_on_access_secret_text_changed"]
[connection signal="text_submitted" from="PanelContainer/VBoxContainer/HBoxContainer/AccessSecret" to="." method="_on_access_secret_text_submitted"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
